--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     
-    <p> Hello World </p>
+    <p> Hello World, we are software developers </p>
     <!--
 
     Hello Camper!
