--- a/index.html
+++ b/index.html
@@ -8,21 +8,32 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <h1>My Survey Form</h1>
 
+    <p>Please help us improve our services. <br> Thanks for your time</p>
+
+    <div>
+      <form>
+        <label>
+          <p>Name</p>
+        </label>
+        <input type="text">
+
+        <label>
+          <p>Email</p>
+        </label>
+        <input type="text">
+
+        <label>
+          <p>Age</p>
+        </label>
+        <input type="text">
+
+
+      </form>
+    </div>
     
-    <p> Hello World, we are software developers </p>
-    <!--
-
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
+  
     <script  src="js/index.js"></script>
   </body>
 </html>
